# COSYNNC

./: .gitignore  CMakeLists.txt  COSYNNC.sln  README.md
COSYNNC/: Abstraction.cpp  Abstraction.h  BddManager.cpp  BddManager.h  ControlSpecification.cpp  ControlSpecification.h  Controller.cpp  Controller.h  DCDC.cpp  DCDC.h  Edge.cpp  Edge.h  Encoder.cpp  Encoder.h  FileManager.cpp  FileManager.h  Hyperplane.cpp  Hyperplane.h  LinearHybrid.cpp  LinearHybrid.h  MultilayerPerceptron.cpp  MultilayerPerceptron.h  NeuralNetwork.cpp  NeuralNetwork.h  Plane.cpp  Plane.h  Plant.cpp  Plant.h  Procedure.cpp  Procedure.h  Quantizer.cpp  Quantizer.h  Rocket.cpp  Rocket.h  RungeKutta.cpp  RungeKutta.h  StateSpaceRepresentation.cpp  StringHelper.cpp  StringHelper.h  Transition.cpp  (+10 more)
COSYNNC/controllers/: log.txt
controllers/: log.txt
controllers/timestamps/: dummy.txt
controllers/winningsets/: winningset86-384903.m  winningset86-601646.m  winningset87-764153.m  winningset87-872520.m  winningset88-227180.m  winningset89-635979.m  winningset90-901924.m  winningset91-685143.m  winningset92-916611.m
enc_temp_folder/79b8ed771aabad142391fb8545effe/: Encoder.cpp
enc_temp_folder/96fea6c9a7dfc4c8f296552e10e6e012/: FileManager.h
ext/scots/: build_command.txt  installation_notes_windows.txt
ext/scots/bdd/: SymbolicModelGrowthBound.hh  SymbolicSet.hh
src/: Encoder.cpp  Procedure.cpp  Procedure.h  main.cpp
src/control/: Abstraction.cpp  Abstraction.h  ControlSpecification.cpp  Controller.cpp  Controller.h  Quantizer.cpp  Quantizer.h  Transition.h  Verifier.cpp  Verifier.h
src/interface/: FileManager.h
src/neuralnetworks/: MultilayerPerceptron.cpp  MultilayerPerceptron.h  NeuralNetwork.cpp  NeuralNetwork.h
src/plants/: DCDC.cpp  DCDC.h  LinearHybrid.h  Plant.h  Rocket.h  StateSpaceRepresentation.h  Unicycle.cpp
src/utilities/: Edge.h  Hyperplane.cpp  Hyperplane.h  StringHelper.cpp  Vector.h
utils/converter/: Makefile  README.txt  converter.cc
utils/converter/controllers/: dummy.txt
utils/transitions/: Makefile  README.txt  transitions.cc
utils/visualizers/: partition.m  visualizer.m  winningset.m
utils/visualizers/functions/: CalculateDataSize.m  EvaluateNetwork.m  GetControlActionFromNetworkForLabelledNeurons.m  GetControlActionFromNetworkForRangeNeurons.m  GetIndexFromVector.m  GetLowerVertexFromIndex.m  NormalizeState.m  ProcessSpace.m  QuantizeState.m  RungeKutta.m
utils/visualizers/plants/dcdc/: ODE.m
utils/visualizers/plants/linear/: ODE.m
utils/visualizers/plants/linearhybrid/: ODE.m
utils/visualizers/plants/mimo/: ODE.m
(+2 files in other folders)
